build.log
    Checking bacnet-mqtt-gateway v0.1.0 (/home/matt/antigravity/bacnet-mqtt-bridge-gateway/bacnet-mqtt-gateway)
warning: unused import: `Deserialize`
 --> bacnet-mqtt-gateway/src/mqtt.rs:3:13
  |
3 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `receive_frame` found for struct `std::sync::MutexGuard<'_, BacnetIpDataLink>` in the current scope
  --> bacnet-mqtt-gateway/src/bacnet.rs:72:53
   |
72 | ...f, src)) = dl_lock.receive_frame() {
   |                       ^^^^^^^^^^^^^ method not found in `std::sync::MutexGuard<'_, BacnetIpDataLink>`
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `DataLink` which provides `receive_frame` is implemented but not in scope; perhaps you want to import it
   |
 1 + use bacnet_rs::DataLink;
   |

error[E0282]: type annotations needed
  --> bacnet-mqtt-gateway/src/bacnet.rs:73:29
   |
73 |                         if !buf.is_empty() {
   |                             ^^^ cannot infer type

Some errors have detailed explanations: E0282, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `bacnet-mqtt-gateway` (bin "bacnet-mqtt-gateway") generated 1 warning
error: could not compile `bacnet-mqtt-gateway` (bin "bacnet-mqtt-gateway") due to 2 previous errors; 1 warning emitted
